even more JavaDoc and bug fixes.